<resources>
    <!--Main Strings-->
    <string name="app_name">Village</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="error">Error loading user name</string>
    <string name="Guest">Guest</string>

    <!--Menu-->
    <string name="create">Create Account</string>
    <string name="logout">Logout</string>
    <string name="reload">Error loading page \n Tap to retry</string>

    <!--Pay-->
    <string name="androidPay">Donate with Android Pay instead?</string>

    <!--Tab strings-->
    <string name="tab_label1">Home</string>
    <string name="tab_label2">Contact</string>
    <string name="tab_label3">Notes</string>
    <string name="tab_label4">Podcasts</string>
    <string name="tab_label5">Events</string>
    <string name="tab_label6">Donate</string>
    <string name="tab_label7">Forum</string>

    <!--Google Maps Key-->
    <string name="google_maps_key">AIzaSyAuTTD47CEAygKDloXAPHHaH4QP5yr_P4M</string>

    <!--Login/Signup-->
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">No account yet? Sign Up</string>
    <string name="forgot">Forgotten Password?</string>
    <string name="already">Already have an account? Login</string>
    <string name="signup_btn">Sign Up</string>
    <string name="guest">Continue without an account</string>

    <!--Update Account-->
    <string name="new_email">Enter new email</string>
    <string name="new_password">Enter new password</string>
    <string name="update_btn">Update Account</string>

    <!--New Note-->
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="create_note">Create Note</string>
    <string name="reset_password">Reset Password</string>
    <string name="logged">You must be logged in to use this feature.</string>
    <string name="search">Search</string>

    <!--Tab Contacts-->
    <string name="church_address">25 Upper Newtownards Road \n Belfast \n BT4 3HT</string>
    <string name="number">028 9065 6696</string>
    <string name="find_us">Find us on social media</string>
    <string name="fill_out">Fill out a Connection Card</string>
    <string name="facebook">Facebook Logo</string>
    <string name="instagram">Instagram Logo</string>
    <string name="twitter">Twitter Logo</string>


    <!--Connection Card-->
    <string name="connection_card">Connection Card</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="phone">Phone Number</string>
    <string name="married">Married</string>
    <string name="single">Single</string>
    <string name="how">How did you hear about us?</string>
    <string name="website">Website</string>
    <string name="social">Social Media</string>
    <string name="friend">Friend</string>
    <string name="next">What\'s Next?</string>
    <string name="commit">I want to know more about committing my life to Jesus</string>
    <string name="baptised">I\'d like to be baptised</string>
    <string name="mc">I\'m interested in joining a missional community</string>
    <string name="member">I\'m interested in becoming a member</string>
    <string name="volunteer">I\'d like to volunteer in a ministry</string>
    <string name="contacted">I\'d like to be contacted by a leader</string>
    <string name="comments">Comments</string>
    <string name="submit">Done</string>

    <!--Single Note-->
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="note_time">Note Timestamp</string>

    <!--Feed-->
    <string name="nil">0</string>
    <string name="posted">Posted by: </string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="more">Read More</string>
    <string name="less">Read Less</string>
    <string name="reply">Comments</string>
    <string name="attending">Going?</string>

    <!--Podcast-->
    <string name="content">Content</string>
    <string name="zero">00:00:00</string>

    <!--Home-->
    <string name="titleHome">JOINING GOD IN THE RENEWAL OF BELFAST.</string>
    <string name="description">Village Church Belfast desires to be a Gospel-shaped community of people who love Jesus, each other, and our city of Belfast as we join God in the renewal of all things.</string>
    <string name="paragraph1">At Village we have three varying, but simple levels of gathering. Our Sunday gathering, when we all come together to worship God through scripture, music, and communion. During the week, we meet as smaller groups to share dinner together and to spend time reading, praying, and encouraging one another. We also meet in groups of 3 or 4 to further encourage and care for one another.</string>
    <string name="paragraph2">While these organised times of the church gathered are important, at Village we place a lot of emphasis on living life together in the every day and the ordinary – the church scattered. Church shouldn\'t be either/or, but both/and. In our love for Belfast, we are convinced that the Church is most effective when we operate as both the gathered and the scattered. We celebrate and worship together in the presence of God so that we may be empowered as His divine image-bearers to care for our city in our workplaces, pubs, cafes, commnity groups, and more.</string>

    <string name="donateTitle">Giving</string>
    <string name="donate">In Village we believe in the unfathomable and unending generosity of God through the Gospel in Jesus giving Himself up for us. We believe in the calling of the Church to respond in obedience to God\'s commands and his generosity, mercy and grace to the world. One way in which we demonstrate this is in the stewardship of our finances and open handed generosity with the gifts God has so graciously given to us.

                            If you would like to support the work of Village in this way, simply enter the amount you would like to give, choose between a one-time or monthly gift, and then follow a few simple steps to process the donation.

                            Alternatively, if you are interested in setting up a regular standing order from your bank, please click here to request more information.

                            As a church we are committed to stewarding your giving towards God's mission of sharing the gospel and caring for those in material need. Thank you for partnering with us in this way. </string>

</resources>
