<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context="jack.village.TabHome">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/village_login" />

    <TextView
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/titleHome"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="17sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:padding="15dp">
    </View>

    <TextView
        android:id="@+id/home_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/home_paragraphOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/paragraph1"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="14sp"/>


    <TextView
        android:id="@+id/home_paragraphTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/paragraph2"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="14sp"/>

    </LinearLayout>
</ScrollView>