<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:minWidth="156dp"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/noteCard"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:maxHeight="128dp"
        android:minHeight="128dp"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="156dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/noteCardTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:text="@string/note_title"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/noteCardContent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="14sp"
                android:scrollHorizontally="false"
                android:text="@string/note_content"
                android:drawableEnd="@drawable/ic_action_edit"
                android:drawablePadding="10dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/noteCardTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/note_time"
                android:textSize="12sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>