<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jack.village.FeedActivityNew">


        <Button
            android:id="@+id/feedSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/submit" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/feedSubmit"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/feedImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                app:srcCompat="@mipmap/add_btn" />


            <EditText
                android:id="@+id/feedTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:hint="@string/title"
                android:inputType="text"
                android:background="@android:color/transparent"
                android:textCursorDrawable="@drawable/cursor"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:padding="20dp"
                android:alpha="0.3"
                android:background="@color/colorAccent" />

            <EditText
                android:id="@+id/feedContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="14sp"
                android:hint="@string/content"
                android:inputType="textMultiLine"
                android:background="@android:color/transparent"
                android:textCursorDrawable="@drawable/cursor"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
