<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/white"
    tools:context="jack.village.ForumComments">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:id="@+id/forumTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollHorizontally="false"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:padding="10dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/forumImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/add_btn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/like"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/ic_favorite_black_24dp"
                android:tint="#D3D3D3"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:padding="10dp"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/likeCount"
                android:text="@string/nil"/>

        </LinearLayout>

    <TextView
        android:id="@+id/forumContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:scrollHorizontally="false"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:padding="5dp"
        android:textColor="@color/black" />

            <TextView
                android:id="@+id/readMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:layout_weight="1"
                android:textSize="14sp"
                android:scrollHorizontally="false"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:padding="5dp"
                android:textColor="@color/colorAccent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:padding="20dp"
                android:alpha="0.3"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:text="Comments"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/commentList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"/>

        </LinearLayout>

    </ScrollView>

    <EditText
        android:id="@+id/comment"
        android:hint="@string/comment"
        android:minHeight="50dp"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:scrollHorizontally="false"
        android:background="@color/white"
        android:nextFocusUp="@id/comment"
        android:nextFocusLeft="@id/comment"
        android:layout_height="wrap_content" />

</RelativeLayout>
